--- a/vue3-practice/package.json
+++ b/vue3-practice/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.7.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
@@ -33,6 +34,7 @@
     "npm-run-all2": "^6.1.2",
     "typescript": "~5.4.0",
     "unplugin-auto-import": "^0.17.6",
+    "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vitest": "^1.4.0",
